# library_rental_system_cpp

./: .gitignore  CMakeLists.txt  main.cpp
headers/: Book.hpp  IClient.hpp  IClientManager.hpp  IDocument.hpp  IFileHandler.hpp  IProduct.hpp  IProductManager.hpp  IRentalSystem.hpp  LibClient.hpp  LibClientManager.hpp  LibFileHandler.hpp  LibProductManager.hpp  LibraryRentalSystem.hpp
libs/: Book.cpp  IClient.cpp  IClientManager.cpp  IDocument.cpp  IFileHandler.cpp  IProduct.cpp  IProductManager.cpp  IRentalSystem.cpp  LibClient.cpp  LibClientManager.cpp  LibFileHandler.cpp  LibProductManager.cpp  LibraryRentalSystem.cpp  main.cpp
tests/: Book-ut.cpp  LibClient-ut.cpp  LibClientManager-ut.cpp  LibFileHandler-ut.cpp  LibProductManager-ut.cpp  LibraryRentalSystem-ut.cpp
uml/: uml-iClient.txt  uml-iFileHandler.txt  uml-iProduct.txt  uml-iProductManager.txt
